# horkew

./: .gitignore  README.md  pyproject.toml
analyses/medical/: attend_hospital.ipynb  config_destination.py
analyses/opendata/: opendata.ipynb
analysis/master_thesis/: .gitignore  GMM.ipynb  QSM.ipynb  QSM_20240922.ipynb  README.md  area2_2.ipynb  area2_2_HF.ipynb  area4_4_HF.ipynb  area4_4_HF_params.ipynb  conterfactual.ipynb  data_2000.ipynb  data_2000_.ipynb  data_2005.ipynb  data_2010.ipynb  data_2020.ipynb  data_2020_.ipynb  data_setup.ipynb  data_setup__.ipynb  prep_data.ipynb  selenium01.py  test.ipynb  没コード.ipynb
analysis/master_thesis/libs/: Horcher_Fertility_model.py  Horcher_model.py  Horcher_model_non_agglm.py  Prepare_data.py
analysis/master_thesis/libs_QSM/: Estimate_params copy.py  Estimate_params.py  Plot_gdf.py  Plot_gdf_tx.py  Prepare_data.py  Solve_equilibrium.py  Solve_equilibrium_ref.py  Solve_equilibrium_ref2.py  Solve_equilibrium_ref3.py  _Prepare_data_ref1.py  _Solve_equilibrium_ref1.py  _Solve_equilibrium_ref2.py  _Solve_equilibrium_ref3.py  _Solve_equilibrium_ref4.py
analysis/master_thesis/test_next/: K_i.csv  Pi_ij.csv  Q_j.csv  W_ij.csv  n_ij.csv  param.csv  phi_i.csv  q_i.csv  scaler.csv  t_ij.csv  theta_i.csv  w_j.csv
analysis/master_thesis/test_prev/: Pi_ij.csv  (+10 more)
analysis/medical/: config_origin.py
analysis/mori/: ch15.ipynb
analysis/quick_analysis/: read_file.ipynb
projects/base/: .gitignore
projects/jip2021/: .gitignore
projects/jip2023/: .gitignore
projects/pea/: .gitignore
projects/pt_tokyo_2018/: .gitignore
projects/rjip2021/: .gitignore
projects/sotetsu/: .gitignore
(+269 files in other folders)
