[tool.poetry]
name = "horkew"
version = "0.1.0"
description = ""
authors = ["nagampere <yohei.naga@maas.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
duckdb = "^0.9.2"
dbt-duckdb = "^1.7.0"
notebook = "^7.0.6"
pandas = "^2.1.4"
geopandas = "^0.14.2"
keplergl = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
